fix: resolve GraphQL field alias at top-level query dispatch (issue #6453)
When a top-level GraphQL query field is aliased (e.g. `{ myBooks: books(inStock: true) { title } }`),
`Selection.getName()` returns the alias (`myBooks`) instead of the real field name (`books`),
causing the schema lookup to fail with "Target type not defined for GraphQL query 'myBooks'".

Fix: resolve the real field name via `getFieldWithAlias().getName()` when an alias is present,
mirroring the pattern already established in `GraphQLResultSet.mapBySelections` for nested-field
aliases (PR #6451). Also handle FieldWithAlias for argument parsing and projection so aliased
queries with arguments work correctly.

(cherry picked from commit 6b63afbb2fa4943c98292312fd74263fd71e3d48)